# fuzzy_rename_rs

./: Cargo.toml  README.md  fuzzy_rename_rs.js  fuzzy_rename_rs_bg.wasm  index.html  sw.js
.github/workflows/: build.yml  release.yml
src/: app.rs  main.rs
