[package]
name = "fuzzy_rename_rs"
version = "0.1.0"
authors = ["Arniel Ceballos <aceba1@proton.me>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui_extras = { version = "0.20.0", default-features = false, features = [
] }

serde = { version = "1", features = ["derive"] }
strsim = "0.10.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
rfd = "0.10.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
